--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
         </developer>
     </developers>
     <scm>
-        <url>https://github.com/kovi77/</url>
+        <url>https://github.com/kovi77/Darts</url>
     </scm>
     <licenses>
         <license>
