--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
--dependency-reduced-pom.xml
--target/
--.idea/
--*.iml
--nbactions.xml
--nb-configuration.xml
--LogFile.log
-/target/
+dependency-reduced-pom.xml
+target/
+.idea/
+*.iml
+nbactions.xml
+nb-configuration.xml
+LogFile.log
