--- a/pom.xml
+++ b/pom.xml
@@ -254,6 +254,13 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.7.6.201602180812</version>
+                <configuration>
+                    <includes>
+                        <include>**/controller/*.*</include>
+                        <include>**/manager/*.*</include>
+                        <include>**/model/*.*</include>
+                    </includes>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
