--- a/pom.xml
+++ b/pom.xml
@@ -237,7 +237,7 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.10.3</version>
                 <configuration>
-                    <show>private</show>
+                    <excludes>private</excludes>
                 </configuration>
             </plugin>
             <plugin>
